@@ -6,30 +6,36 @@ import graph.*;
 
 public class ProblemSolver implements IProblem {
 
+	//m - number of edges in the graph
+	//n - number of nodes in the graph
 
 	@Override
-	public <V, E extends Comparable<E>> List<Edge<V>> mst(WeightedGraph<V, E> g) {
-		ArrayList<Edge<V>> mstEdges = new ArrayList<>(g.numVertices());
-		if (g.numEdges() < 1) {return mstEdges;}
+	public <V, E extends Comparable<E>> List<Edge<V>> mst(WeightedGraph<V, E> g) { //O(n + log m + (m log m)) = O(m log m)
+		ArrayList<Edge<V>> mstEdges = new ArrayList<>(g.numVertices()); //O(1)
 
-		HashSet<V> found = new HashSet<>(g.numVertices());
-		PriorityQueue<Edge<V>> toSearch = new PriorityQueue<>(g);
-		V start = g.vertices().iterator().next();
-		found.add(start);
 
-		for (Edge<V> edge : g.adjacentEdges(start)) {
-			toSearch.add(edge);
+		if (g.numEdges() < 1) {return mstEdges;} //O(1)
+		HashSet<V> found = new HashSet<>(g.numVertices()); //O(1)
+		PriorityQueue<Edge<V>> toSearch = new PriorityQueue<>(g); //O(n)
+		V start = g.getFirstNode(); //O(1)
+		found.add(start); //O(1)
+
+
+		for (Edge<V> edge : g.adjacentEdges(start)) { //O(degree)
+			toSearch.add(edge); //O(log m)
 		}
 
-		while(!toSearch.isEmpty()) {
-			Edge<V> next = toSearch.poll();
 
-			if (found.contains(next.a) && found.contains(next.b)) continue;
+		while(!toSearch.isEmpty()) { //O(m)
+			Edge<V> next = toSearch.poll(); //O(log m)
+			if (found.contains(next.a) && found.contains(next.b)) continue; //O(1)
 
-			mstEdges.add(next);
 
-			isVisited(g, next.a, found, toSearch);
-			isVisited(g, next.b, found, toSearch);
+			mstEdges.add(next); //O(1)
+
+
+			isVisited(g, next.a, found, toSearch); //O(log m)
+			isVisited(g, next.b, found, toSearch); //O(log m)
 
 		}
 		return mstEdges;
@@ -44,24 +50,24 @@ public class ProblemSolver implements IProblem {
 	 * @param found the list to add the node
 	 * @param toSearch the list to add the edges with equal endpoint as the node
 	 */
-	private  <V, E extends Comparable<E>> void isVisited(WeightedGraph<V, E> g, V node, HashSet<V> found, PriorityQueue<Edge<V>> toSearch) {
-		found.add(node);
-		for (Edge<V> edge : g.adjacentEdges(node)) {
-			toSearch.add(edge);
+	private  <V, E extends Comparable<E>> void isVisited(WeightedGraph<V, E> g, V node, HashSet<V> found, PriorityQueue<Edge<V>> toSearch) { //O(log m)
+		found.add(node); //O(1)
+		for (Edge<V> edge : g.adjacentEdges(node)) { //O(degree)
+			toSearch.add(edge); //O(log m)
 		}
 	}
 
 		@Override
-	public <V> V lca(Graph<V> g, V root, V u, V v) {
+	public <V> V lca(Graph<V> g, V root, V u, V v) { //O(n+m)
 
 		new BFS();
-		HashMap<V, V> bfs = BFS.bfs(g,root);
+		HashMap<V, V> bfs = BFS.bfs(g,root); //O(m)
 
-		ArrayList<V> pathToU = path(u, bfs);
-		ArrayList<V> pathToV = path(v, bfs);
+		LinkedList<V> pathToU = path(u, bfs); //O(n)
+		LinkedList<V> pathToV = path(v, bfs); //O(n)
 
 
-		for (V node : pathToV) {
+		for (V node : pathToV) { //O(n)
 			if (new HashSet<>(pathToU).contains(node))
 				return node;
 		}
@@ -75,9 +81,9 @@ public class ProblemSolver implements IProblem {
 	 * @param bfs the map of each node to its parent in the search tree
 	 * @return the path from the node to the root
 	 */
-	private <V> ArrayList<V> path(V node, HashMap<V,V> bfs) {
-		ArrayList<V> path = new ArrayList<>();
-		while (node != null) {
+	private <V> LinkedList<V> path(V node, HashMap<V,V> bfs) {
+		LinkedList<V> path = new LinkedList<>();
+		while (node != null) { //O(n)
 			path.add(node);
 			node = bfs.get(node);
 		}
@@ -85,50 +91,66 @@ public class ProblemSolver implements IProblem {
 	}
 
 
+	/**
+	 * Finds the best place to put a new edge in a graph.
+	 * @param g - the tree built by the power company
+	 * @param root
+	 * @return
+	 * @param <V>
+	 */
 	@Override
 	public <V> Edge<V> addRedundant(Graph<V> g, V root) {
-		HashMap<V,Integer> SubtreeSize = new HashMap<>();
-		HashMap<V,ArrayList<V>> neighbours = new HashMap<>();
-		HashSet<V> visited = new HashSet<>();
+		HashMap<V,Integer> size = new HashMap<>(); //O(1)
+		HashSet<V> visited = new HashSet<>(); //O(1)
+		HashMap<V, LinkedList<V>> nodeNeighbours = new HashMap<>();
+		size(g, root, size, visited, nodeNeighbours);
 
-		size(g, root, SubtreeSize, visited, neighbours);
+		return findBestEdge(size, nodeNeighbours, g, root);
+	}
 
-		ArrayList<V> leaves = new ArrayList<>();
-		ArrayList<V> nodes = new ArrayList<>();
 
-		for (V n : g.neighbours(root)){
-			nodes.add(n);
-		}
-
+	/**
+	 * Find leaf of the two biggest subtree and return the edge between them.
+	 * @param size
+	 * @param nodeNeighbours
+	 * @return
+	 * @param <V>
+	 */
+	public <V> Edge<V> findBestEdge(HashMap<V, Integer> size, HashMap<V, LinkedList<V>> nodeNeighbours, Graph<V> g, V root) {
+		LinkedList<V> leaves = new LinkedList<>();
+		LinkedList<V> nodes = new LinkedList<>();
 		HashSet<V> subTrees = new HashSet<>();
-		Comparator<V> compareSize = Comparator.comparingInt(SubtreeSize::get);
-		nodes.sort(Collections.reverseOrder(compareSize));
-		subTrees.add(nodes.get(0));
 
-		if (g.degree(root) > 1){
-			subTrees.add(nodes.get(1));
-		} else {
-			leaves.add(root);
+		for (V rootNeighbours : g.neighbours(root)){
+			nodes.add(rootNeighbours);
 		}
+
+		Comparator<V> compareSize = Comparator.comparingInt(size::get);
+		nodes.sort(Collections.reverseOrder(compareSize));
+
+		subTrees.add(nodes.poll());
+		if (g.degree(root) > 1){subTrees.add(nodes.poll());}
+		else {leaves.add(root);}
 
 
 		for (V rootNode : subTrees){
 			while (g.degree(rootNode) != 1){
 				int i = 0;
-				V newNode = null;
+				V tempNode = null;
 
-				for (V neighbor : neighbours.get(rootNode)){
-					if (SubtreeSize.get(neighbor) > i){
-						i = SubtreeSize.get(neighbor);
-						newNode = neighbor;
+				for (V neighbor : nodeNeighbours.get(rootNode)){
+					if (size.get(neighbor) > i){
+						i = size.get(neighbor);
+						tempNode = neighbor;
 					}
 				}
-				rootNode = newNode;
+				rootNode = tempNode;
 			}
 			leaves.add(rootNode);
 		}
-		return new Edge<>(leaves.get(0),leaves.get(1));
+		return new Edge<>(leaves.getFirst(),leaves.getLast());
 	}
+
 
 	/**
 	 * Calculates the size of each subtree.
@@ -139,13 +161,14 @@ public class ProblemSolver implements IProblem {
 	 * @param neighbours hashmap to store the neighbours of each node
 	 * @return the size of the subtree
 	 */
-	public <V> int size(Graph<V> g, V node, HashMap <V, Integer> count, HashSet <V> visited, HashMap <V, ArrayList<V>> neighbours){
+	public <V> int size(Graph<V> g, V node, HashMap <V, Integer> count, HashSet <V> visited, HashMap <V, LinkedList<V>> neighbours){
 		int counter = 1;
-		visited.add(node);
-		ArrayList<V> n = new ArrayList<>();
-		for(V children : g.neighbours(node)){
-			if(!visited.contains(children)){
-				n.add(children);
+
+		visited.add(node); //(1)
+		LinkedList<V> n = new LinkedList<>();
+		for(V children : g.neighbours(node)){  //O(degree(node))
+			if(!visited.contains(children)){ //O(1)
+				n.add(children); //O(1)
 				counter += size(g, children, count, visited, neighbours);
 			}
 		}
